--- a/localEthereum/chaindata/history
+++ b/localEthereum/chaindata/history
@@ -16,3 +16,25 @@ eth.sendTransaction({
   from: '0x2910574Bdf1895fDf0E558Fd023fD61b3de68cA3', to: '0xCbAf0dAf5081557F0ccC9226a8226A1389D36c08', value: web3.toWei(0.1, 'ether'), gasPrice: web3.toWei(1, 'gwei')
 });
 miner.start()
+eth.sendTransaction({
+  from: '0x2910574Bdf1895fDf0E558Fd023fD61b3de68cA3', to: '0xCbAf0dAf5081557F0ccC9226a8226A1389D36c08', value: web3.toWei(0.1, 'ether'), gasPrice: web3.toWei(1, 'gwei')
+});
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+eth.getTransaction('0xa7100337b443521f79f9b7cc0e3cf68998bcbd031710aa98a31b922e346341fe')
+eth.sendTransaction({
+  from: '0x2910574Bdf1895fDf0E558Fd023fD61b3de68cA3', to: '0xCbAf0dAf5081557F0ccC9226a8226A1389D36c08', value: web3.toWei(0.1, 'ether'), gasPrice: web3.toWei(1, 'gwei')
+});
+miner.start()
+miner.stop()
+miner.start()
+miner.stop
+miner.stop()
+miner.start()
+miner.stop()
+stop
+geth.stop
+miner.start()
+miner.stop()
